# EVAD

./: DataExploration.ipynb  DataExploration_CWRU.ipynb  EVAD.ipynb  EVAD.nbconvert.ipynb  EVAD_CWRU.ipynb  EVAD_TriaxalBearings.ipynb  EVAD_TriaxalBearings.nbconvert.ipynb  Memory.ipynb  Memory_CWRU.ipynb  Memory_Triaxal.ipynb  Plots_Triaxal.ipynb  README.md  get_data.sh  he_svm.py  pyproject.toml  requirements.txt  times.csv
results/: Errors_0.9inner-200watt.csv  Errors_0.9inner-300watt.csv  Errors_0.9outer-200watt.csv  Errors_1.1outer-100watt.csv  Errors_1.1outer-300watt.csv  Errors_1.3inner-100watt.csv  Errors_1.3inner-200watt.csv  Errors_1.3outer-100watt.csv  Errors_1.5inner-100watt.csv  Errors_1.5inner-200watt.csv  Errors_1.5outer-200watt.csv  Errors_1.7outer-100watt.csv  Errors_1.7outer-200watt.csv
results/CWRU/: Errors_0_007_ball_0.csv  Errors_0_007_ball_1.csv  Errors_0_007_ball_2.csv  Errors_0_007_ball_3.csv  Errors_0_007_inner_0.csv  Errors_0_007_inner_1.csv  Errors_0_007_inner_2.csv  Errors_0_007_inner_3.csv  Errors_0_007_outer_0.csv  Errors_0_007_outer_1.csv  Errors_0_007_outer_2.csv  Errors_0_007_outer_3.csv  Errors_0_014_ball_0.csv  Errors_0_014_ball_1.csv  Errors_0_014_ball_2.csv  Errors_0_014_ball_3.csv  Errors_0_014_inner_0.csv  Errors_0_014_inner_1.csv  Errors_0_014_inner_2.csv  Errors_0_014_inner_3.csv  Errors_0_014_outer_0.csv  Errors_0_014_outer_1.csv  Errors_0_014_outer_2.csv  Errors_0_014_outer_3.csv  Errors_0_021_ball_0.csv  Errors_0_021_ball_1.csv  Errors_0_021_ball_2.csv  Errors_0_021_ball_3.csv  Errors_0_021_inner_0.csv  Errors_0_021_inner_1.csv  (+5 more)
(+23 files in other folders)
